solved search on home page (was due to changes in hygraph db structure) and added dynamic links to search results for blogposts and opleidingen. Added opleiding detail page and dyanmic link on each opleiding on opleidingen page + idem dito for blog / blogpost. I regard this project as finished. This should be my final repo push

--- a/pgm_platform/src/App.css
+++ b/pgm_platform/src/App.css
@@ -87,3 +87,11 @@ footer {
 .tag.title {
   transform: translateX(-1rem);
 }
+
+.search.results {
+  margin: 1rem 0 0 0;
+}
+
+.opleidingen {
+  padding: 1rem;
+}
